--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "angular2-in-memory-web-api": "0.0.7",
     "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
+    "jquery": "^2.2.3",
     "lodash": "^4.11.2",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
+    "toastr": "^2.1.2",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
